--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,8 +9,7 @@ jobs:
       - uses: docker://lpenz/omnilint:v0.2
   # Rust actions from:
   # https://github.com/actions-rs/meta/blob/master/recipes/quickstart.md
-  cargo-check:
-    name: cargo check
+  cargo-check-doc:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -22,26 +21,16 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: check
+      - uses: actions-rs/cargo@v1
+        with:
+          command: doc
   test-coverage:
-    name: cargo test with coveralls
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions-rs/toolchain@v1.0.7
-        with:
-          toolchain: nightly
-          override: true
-      - uses: actions-rs/cargo@v1.0.3
-        with:
-          command: test
-          args: --all-features --no-fail-fast --bins
-        env:
-          CARGO_INCREMENTAL: '0'
-          RUSTFLAGS: '-Zprofile -Ccodegen-units=1 -Cinline-threshold=0 -Clink-dead-code -Coverflow-checks=off -Cpanic=abort -Zpanic_abort_tests'
-          RUSTDOCFLAGS: '-Zprofile -Ccodegen-units=1 -Cinline-threshold=0 -Clink-dead-code -Coverflow-checks=off -Cpanic=abort -Zpanic_abort_tests'
       - id: coverage
-        uses: docker://lpenz/ghaction-grcov-express:0.2
-      - uses: coverallsapp/github-action@v1.1.2
+        uses: docker://lpenz/ghaction-rust-coverage:0.5.0
+      - uses: coverallsapp/github-action@1.1.3
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           path-to-lcov: ${{ steps.coverage.outputs.report }}
